--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -44,6 +44,8 @@ link:python.html[Python]
 
 link:prototype-js.html[prototype.js]
 
+link:regex.html[regex]
+
 link:tc-server.html[tc-server]
 
 link:ubuntu.html[Ubuntu]
