--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -36,6 +36,8 @@ link:java8-lambdas.html[Java 8 lambdas]
 
 link:javascript.html[JavaScript]
 
+link:jhipster.html[JHipster]
+
 link:kotlin.html[Kotlin]
 
 link:kubernetes.html[Kubernetes]
