--- a/src/docs/asciidoc/kubernetes.adoc
+++ b/src/docs/asciidoc/kubernetes.adoc
@@ -632,3 +632,154 @@ Adopted by libnetwork
 `Libnetwork` is the canonical implementation of the CNM specification.
 
 include::kubernetes-certified-kubernetes-adm.adoc[]
+
+=== Lab
+
+ $ kubectl get namespaces
+
+ $ kubectl creace namespace pod-example
+
+Sample pod definition:
+
+[source,yaml]
+----
+apiVersion: v1
+kind: Pod
+metadata:
+  name: examplepod
+  namespace: pod-example
+spec:
+  volumes:
+  - name: html
+    emptyDir: {}
+  containers:
+  - name: webcontainer
+    image: nginx
+    volumeMounts:
+    - name: html
+      mountPath: /usr/share/nginx/html
+  - name: filecontainer
+    image: debian
+    volumeMounts:
+    - name: html
+      mountPath: /html
+    command: ["/bin/sh", "-c"]
+    args:
+      - while true; do
+         date >> /html/index.html;
+         sleep 1;
+        done
+----
+
+ $ kubectl create -f ./pod-example.yaml
+
+ $ kubectl --namespace=pod-example get pods -o wide
+
+ $ kubectl --namespace=podexample delete pod examplepod
+
+==== Networking
+
+* all services that are defined in the cluster get a DNS record.
+  This is true for the DNS service as well.
+* pods search DNS relative to their own namespace
+* the DNS server schedules a DNS pod on the cluster and configures
+  the kubelets to set the containers to use the cluster DNS
+  service.
+* PodSpec DNS policies determine the way that a container
+  uses DNS.
+  Options include: _Default_, _ClusterFirst_, or _None_.
+
+ $ kubectl exec -it <containe>
+
+==== Replicas
+
+Sample replica definition:
+
+[source,yaml]
+----
+apiVersion: apps/v1
+kind: ReplicaSet
+metadata:
+  name: frontend
+  labels:
+    app: nginx
+    tier: frontend
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      tier: frontend
+    matchExpressions:
+      - {key: tier, operator: In, values: [frontend]}
+  template:
+    metadata:
+      labels:
+        app: nginx
+        tier: frontend
+    spec:
+      containers:
+      - name: nginx
+        image: darealmc/nginx-k8s:v1
+        ports:
+        - containerPort: 80
+----
+
+ $ kubectl describe rs/frontend
+
+ $ kubectl describe pods/frontend-2c5lf
+
+ $ kubectl scale rs/frontend --replicas=4
+
+ $ kubectl delete rs/frontend
+
+==== Services
+
+Sample service definition:
+
+[source,yaml]
+----
+kind: Service
+apiVersion: v1
+metadata:
+  name: my-awesome-service
+spec:
+  selector:
+    app: nginx
+  ports:
+  - protocol: TCP
+    port: 32768
+    targetPort: 80
+----
+
+==== Deployments
+
+Sample deployment destcription:
+
+[source,yaml]
+----
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: example-deployment
+  labels:
+    app: nginx
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: darealmc/nginx-k8s:v1
+        ports:
+        - containerPort: 80
+----
+
+ $ kubectl create -f ...
+
+ $ kubectl set image deployment.v1.apps/example-deployment nginx=derealmc/nginx-k8s:v2
